# cmake-tutor-progress

./: .gitignore  CMakeLists.txt  Makefile  README.md  float.cpp  float.h  float_caculator  main  main.cpp  main.h  print.cpp  print.h  run.sh
main.dSYM/Contents/Resources/DWARF/: main
make/: toolchain-riscv64.cmake
my_math/: CMakeLists.txt
my_math/src/: float.cpp
my_print/: CMakeLists.txt
my_print/src/: print.cpp
